--- a/typing/Properties/Resources.resx
+++ b/typing/Properties/Resources.resx
@@ -124,4 +124,13 @@
   <data name="type" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\type.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Typing" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Typing.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Typing1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Typing.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Typing2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Typing.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
